<resources>
    <string name="app_name">georentate_app</string>
    <string name="bottom_navtigation_title_map">Map</string>
    <string name="bottom_navigation_title_user">User</string>
    <string name="bottom_navigation_title_settings">Settings</string>
    <string name="bottom_navigation_title_checkpoints">Checkpoints</string>
    <string name="checkpoint_list_available_checkpoints">Available checkpoints</string>
    <string name="search_for_a_checkpoint">Search for a checkpint..</string>
    <string name="login_enter_e_mail">Email</string>
    <string name="login_password">Password</string>
    <string name="checkbox_rememeber_me">Rememeber me</string>
    <string name="login_button_text">Login</string>
    <string name="login_textView">Login</string>
    <string name="login_register"><u>Register</u>.</string>

    <string name="facebook_application_id">442246306616356</string>
    <string name="fb_login_protocol_scheme">fb442246306616356</string>
    <string name="api_key">AIzaSyCLZSVZqJpseuX262cjNikvCkaxvIANUdo</string>


</resources>
