<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/action_userInfo"
            android:title="@string/bottom_navigation_title_user"
            android:icon="@drawable/ic_person_outline_black_24dp"/>
    <item
            android:id="@+id/action_map"
            android:title="@string/bottom_navtigation_title_map"
            android:icon="@drawable/ic_map_black_24dp"/>
    <item
            android:id="@+id/action_checkpointList"
            android:title="@string/bottom_navigation_title_checkpoints"
            android:icon="@drawable/ic_place_black_24dp"/>
    <item
            android:id="@+id/action_settings"
            android:title="@string/bottom_navigation_title_settings"
            android:icon="@drawable/ic_settings_black_24dp"/>
</menu>