<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center" android:id="@+id/linearLayout">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_textView"
                android:textSize="50sp"
                android:fontFamily="sans-serif-light"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
        />

        <ProgressBar
                android:id="@+id/login_progressBar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="20dp"/>

        <EditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_enter_e_mail"
                android:background="@drawable/checkpoint_item_background"
                android:padding="15dp"
                android:layout_marginBottom="5dp"/>

        <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password"
                android:background="@drawable/checkpoint_item_background"
                android:padding="15dp"
                android:inputType="textPassword"/>

        <CheckBox
                android:id="@+id/checkbox_rememeber_me"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_rememeber_me"/>

            <Button
                    android:id="@+id/button_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_button_text"
                    android:textColor="@color/colorAccent"
                    android:background="@drawable/button_background"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_register"
                android:layout_marginTop="10dp"
                android:textColor="#2196F3"
                android:background="?attr/selectableItemBackground"
        />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>